packages/toolkit/components/card/card.scss
/* ==========================================================================
   COMPONENTS / #CARD
   ========================================================================== */

$card-border-width: $ofh-stroke-weight-1;
$card-border-bottom-width: $ofh-stroke-weight-4;
$card-background: $ofh-color-background-primary;
$card-border-color: $ofh-color-border-card-default;
$card-border-hover-color: $ofh-color-border-card-hover;

.ofh-card {
  @include ofh-responsive-margin(8, 'bottom');

  background: $card-background;
  border: $card-border-width solid $card-border-color;
  position: relative;
  width: 100%;
}

.ofh-card__img {
  @include print-hide();

  border-bottom: $card-border-width solid $ofh-color-background-secondary;
  display: block;
  width: 100%;
}

.ofh-card__content {
  @include top-and-bottom();
  @include ofh-responsive-padding(7);
}

.ofh-card__content--dismissible {
  padding-right: calc(#{ofh-spacing(4)} + #{ofh-spacing(6)} + #{ofh-spacing(3)});

  @include mq($from: tablet) {
    padding-right: calc(#{ofh-spacing(5)} + #{ofh-spacing(6)} + #{ofh-spacing(3)});
  }

  @include mq($from: desktop) {
    padding-right: calc(#{ofh-spacing(6)} + #{ofh-spacing(6)} + #{ofh-spacing(3)});
  }
}

.ofh-card__content--with-aside,
.ofh-card.ofh-card__with-icon > .ofh-card__content {
  align-items: center;
  display: flex;
  gap: ofh-spacing(4);

  @include mq($from: tablet) {
    gap: ofh-spacing(5);
  }

  @include mq($from: desktop) {
    gap: ofh-spacing(6);
  }
}

.ofh-card__main {
  @include top-and-bottom();

  display: flex;
  flex: 1 1 auto;
  flex-direction: column;
  gap: ofh-spacing(4);
  min-width: 0;
}

.ofh-card__heading {
  @include ofh-font('h3', $weight: bold);

  margin: 0;
}

.ofh-card__number {
  @include ofh-font('h1', $weight: bold);

  margin: 0;
}

.ofh-card__main > .ofh-tag {
  align-self: flex-start;
}

.ofh-card__description,
.ofh-card__action {
  margin: 0;
}

.ofh-card__helper {
  @include ofh-font('paragraph-small');

  margin: 0;
}

.ofh-card__link,
.ofh-card__action-link {
  @include ofh-link-style-default();
}

.ofh-card__metadata-list {
  display: flex;
  flex-direction: column;
  gap: ofh-spacing(3);
}

.ofh-card__metadata-item {
  align-items: center;
  display: flex;
  gap: ofh-spacing(3);
}

.ofh-card__metadata-icon-container {
  align-items: center;
  background: $ofh-color-background-secondary;
  border-radius: $ofh-radius-circular;
  display: flex;
  flex: none;
  height: 32px;
  justify-content: center;
  width: 32px;
}

.ofh-card__metadata-icon {
  height: 24px;
  width: 24px;
}

.ofh-card__metadata-text {
  flex: 1 1 auto;
}

.ofh-card__aside {
  align-items: center;
  display: flex;
  flex: none;
  justify-content: center;
}

.ofh-card__icon {
  color: $ofh-color-foreground-feedback-success-2;
  height: 32px;
  width: 32px;
}

.ofh-card__dismiss {
  background: transparent;
  border: 0;
  color: $ofh-color-foreground-primary;
  cursor: pointer;
  padding: 0;
  position: absolute;
  right: ofh-spacing(4);
  top: ofh-spacing(4);
  z-index: 1;

  @include mq($from: tablet) {
    right: ofh-spacing(5);
    top: ofh-spacing(5);
  }

  @include mq($from: desktop) {
    right: ofh-spacing(6);
    top: ofh-spacing(6);
  }

  &:focus {
    @include ofh-focused-button();

    border-radius: $ofh-radius-circular;
  }
}

.ofh-card__dismiss-icon {
  display: block;
}

/* Clickable card
  ========================================================================== */

.ofh-card--clickable {
  border-bottom-width: $card-border-bottom-width;

  &:hover,
  &:active {
    cursor: pointer;

    .ofh-card__primary-link,
    .ofh-card__link {
      color: $ofh-color-foreground-link-hover;
      text-decoration: none;

      &:focus {
        color: $ofh-color-foreground-brand-blue-navy;
      }
    }
  }

  &:hover {
    border-color: $card-border-hover-color;
  }

  &:active {
    border-color: $card-border-hover-color;
    bottom: -$card-border-width;
  }
}

/* Card group
  ========================================================================== */

/**
* Card group allows you to have a row of cards.
*
* Flexbox is used to make each card in a row the same height.
*/

.ofh-card-group {
  @include flex();

  margin-bottom: ofh-spacing(4);
  padding: 0;

  @include mq($until: desktop) {
    margin-bottom: ofh-spacing(7);
  }

  + h2,
  + .ofh-heading-l,
  + h3,
  + .ofh-heading-m {
    padding-top: 0; /* [4] */
  }
}

.ofh-card-group__item {
  @include flex-item();

  list-style-type: none;
  margin-bottom: 0;

  .ofh-card {
    margin-bottom: ofh-spacing(6);
  }

  @include mq($until: desktop) {
    .ofh-card {
      margin-bottom: ofh-spacing(4);
    }

    &:last-child .ofh-card {
      margin-bottom: 0;
    }
  }
}

/* Card feature
  ========================================================================== */

.ofh-card--feature {
  @include ofh-responsive-margin(8, 'top');
}

.ofh-card__heading--feature {
  background: $ofh-color-brand-yellow-3-main;
  color: $ofh-color-foreground-primary-inverted;
  display: inline-block;
  left: -(ofh-spacing(5) + $card-border-width); /* [5] */
  margin-bottom: ofh-spacing(3);
  margin-right: - ofh-spacing(5); /* [6] */
  padding: ofh-spacing(3) ofh-spacing(5);
  position: relative;
  top: - ofh-spacing(3);

  @include mq($from: tablet) {
    left: -(ofh-spacing(6) + $card-border-width); /* [5] */
    margin-right: - ofh-spacing(6); /* [6] */
    padding: ofh-spacing(3) ofh-spacing(6);
    top: - ofh-spacing(4);
  }
}

.ofh-card__content--feature {
  padding-top: 0 !important; /* stylelint-disable-line declaration-no-important */ /* [7] */
}

/* Care card
  ========================================================================== */

.ofh-card--care {
  @include ofh-responsive-margin(8, 'top');
  @include care-card($ofh-color-brand-blue-royal-3-main, $ofh-color-greyscale-white, 4px); /* [8] */
}

.ofh-card--care__heading-container {
  @include ofh-responsive-padding(6, 'left');
  @include ofh-responsive-padding(6, 'right');

  padding-bottom: ofh-spacing(4);
  padding-top: ofh-spacing(4);
  position: relative;
}

.ofh-card--care__heading {
  @include ofh-font('h3', $weight: bold);
  @include print-color($ofh-color-foreground-primary);

  margin: 0;
  padding-top: 0; /* [13] */
}

.ofh-card--care__arrow {
  bottom: -10px; /* [9] */
  display: block;
  height: 20px; /* [9] */
  left: 30px; /* [10] */
  overflow: hidden;
  position: absolute;
  transform: rotate(45deg);
  width: 20px; /* [9] */

  @include print-hide();

  @include mq($from: tablet) {
    left: 38px; /* [10] */
  }

  &::before,
  &::after {
    border: solid 32px $ofh-color-brand-blue-royal-3-main; /* [9] */
    content: '';
    display: block;
    height: 0;
    position: absolute;
    top: 0;
    transform: rotate(45deg); /* [12] */
    width: 0;
  }
}

.ofh-card--care--urgent {
  @include care-card($ofh-color-brand-red-3-main, $ofh-color-greyscale-white, 6px);

  .ofh-card--care__arrow {
    &::before,
    &::after {
      border-color: $ofh-color-brand-red-3-main;
    }
  }
}

.ofh-card--care--emergency {
  @include care-card($ofh-color-brand-red-3-main, $ofh-color-greyscale-white, 8px);

  .ofh-card--care__arrow {
    &::before,
    &::after {
      border-color: $ofh-color-brand-red-3-main;
    }
  }

  .ofh-card__content {
    background-color: $ofh-color-greyscale-black;
    border: 0;
    color: $ofh-color-foreground-primary-inverted;
    position: static; /* [15] */

    a {
      color: $ofh-color-foreground-primary-inverted; /* [16] */

      &:focus {
        color: $ofh-color-greyscale-black; /* [16] */
      }
    }
  }

  .ofh-details,
  .ofh-details__summary {
    color: $ofh-color-foreground-primary-inverted;
  }

  .ofh-details__summary {
    &:hover {
      color: $ofh-color-foreground-primary-inverted;
    }

    &:focus {
      color: $ofh-color-foreground-primary;
    }
  }

  .ofh-action-link__link {
    .ofh-action-link__icon {
      color: $ofh-color-greyscale-white; /* [14] */
    }
  }
}

